HelloUltraviolet/Fixtures/RejectedSource/FFI/FfiSafeEnumGenericUnbounded/Source/Main.uv
//! Rejected FFI specimen for generic enum paths with unconstrained payload type parameters.

#layout(C)
public enum GenericFfiEnum<TValue> {
    Value(TValue)
}

extern "C" {
    public procedure importedEnum(value: GenericFfiEnum) -> i32
}

